MOD:rename eth to kkc

--- a/config/kkchain.toml
+++ b/config/kkchain.toml
@@ -38,7 +38,7 @@ bucketsize = 2
 rpc = true
 
 # RPC service modules
-rpcmodules = ["eth","personal","miner"]
+rpcmodules = ["kkc","personal","miner"]
 
 # Address to listen for incoming connections
 rpcaddr = "/ip4/127.0.0.1/tcp/8545"
